# hse-cpp-task

./: .gitignore  CMakeLists.txt  README.md  default_field.h  fast_fixed.h  fixed.h  fluid.cpp  main.cpp  simulator.h  state.h  utils.h
